--- a/Toperlock/sing-box-subscribe/config_template/config_template_groups_rule_set_gtun.json
+++ b/Toperlock/sing-box-subscribe/config_template/config_template_groups_rule_set_gtun.json
@@ -313,7 +313,8 @@
         "{all}"
       ],
       "filter":[
-        {"action":"include","keywords":["🇭🇰|HK|hk|香港|港|HongKong|0.40|3.00"]}
+        {"action":"include","keywords":["🇭🇰|HK|hk|香港|港|HongKong"]},
+        {"action":"exclude","keywords":["0.40|3.00"]}
       ]
     },
     {
@@ -323,7 +324,8 @@
         "{all}"
       ],
       "filter":[
-        {"action":"include","keywords":["🇹🇼|TW|tw|台湾|臺灣|台|Taiwan|0.40|3.00"]}
+        {"action":"include","keywords":["🇹🇼|TW|tw|台湾|臺灣|台|Taiwan"]},
+        {"action":"exclude","keywords":["0.40|3.00"]}
       ]
     },
     {
@@ -333,7 +335,8 @@
         "{all}"
       ],
       "filter":[
-        {"action":"include","keywords":["🇸🇬|SG|sg|新加坡|狮|Singapore|0.40|3.00"]}
+        {"action":"include","keywords":["🇸🇬|SG|sg|新加坡|狮|Singapore"]},
+        {"action":"exclude","keywords":["0.40|3.00"]}
       ]
     },
     {
@@ -343,7 +346,8 @@
         "{all}"
       ],
       "filter":[
-        {"action":"include","keywords":["🇯🇵|JP|jp|日本|日|Japan|0.40|3.00"]}
+        {"action":"include","keywords":["🇯🇵|JP|jp|日本|日|Japan"]},
+        {"action":"exclude","keywords":["0.40|3.00"]}
       ]
     },
     {
@@ -353,7 +357,8 @@
         "{all}"
       ],
       "filter":[
-        {"action":"include","keywords":["🇺🇸|US|us|美国|美|United States|0.40|3.00"]}
+        {"action":"include","keywords":["🇺🇸|US|us|美国|美|United States"]},
+        {"action":"exclude","keywords":["0.40|3.00"]}
       ]
     },
     {
