--- a/Toperlock/sing-box-subscribe/config_template/config_template_groups_rule_set_gtun.json
+++ b/Toperlock/sing-box-subscribe/config_template/config_template_groups_rule_set_gtun.json
@@ -98,6 +98,9 @@
         "auto",
         "direct",
         "{all}"
+      ],
+      "filter":[
+        {"action":"exclude","keywords":["0.40|3.00"]}
       ]
     },
     {
