--- a/Toperlock/sing-box-subscribe/config_template/config_template_groups_rule_set_gtun.json
+++ b/Toperlock/sing-box-subscribe/config_template/config_template_groups_rule_set_gtun.json
@@ -376,7 +376,7 @@
         "{all}"
       ],
       "filter":[
-        {"action":"exclude","keywords":["网站|地址|剩余|到期｜过期|时间|有效|Traffic|Expire"]}
+        {"action":"exclude","keywords":["网站|地址|剩余|到期|过期|时间|有效|Traffic|Expire"]}
       ],
       "url": "http://www.gstatic.com/generate_204",
       "interval": "10m",
