--- a/Toperlock/sing-box-subscribe/config_template/config_template_groups_rule_set_gtun.json
+++ b/Toperlock/sing-box-subscribe/config_template/config_template_groups_rule_set_gtun.json
@@ -98,9 +98,6 @@
         "auto",
         "direct",
         "{all}"
-      ],
-      "filter":[
-        {"action":"exclude","keywords":["Traffic|Expire"]}
       ]
     },
     {
@@ -316,7 +313,7 @@
         "{all}"
       ],
       "filter":[
-        {"action":"include","keywords":["🇭🇰|HK|hk|香港|港|HongKong"]},
+        {"action":"include","keywords":["🇭🇰|HK|hk|香港|港|HongKong"]}
       ]
     },
     {
@@ -326,7 +323,7 @@
         "{all}"
       ],
       "filter":[
-        {"action":"include","keywords":["🇹🇼|TW|tw|台湾|臺灣|台|Taiwan"]},
+        {"action":"include","keywords":["🇹🇼|TW|tw|台湾|臺灣|台|Taiwan"]}
       ]
     },
     {
@@ -336,7 +333,7 @@
         "{all}"
       ],
       "filter":[
-        {"action":"include","keywords":["🇸🇬|SG|sg|新加坡|狮|Singapore"]},
+        {"action":"include","keywords":["🇸🇬|SG|sg|新加坡|狮|Singapore"]}
       ]
     },
     {
@@ -346,7 +343,7 @@
         "{all}"
       ],
       "filter":[
-        {"action":"include","keywords":["🇯🇵|JP|jp|日本|日|Japan"]},
+        {"action":"include","keywords":["🇯🇵|JP|jp|日本|日|Japan"]}
       ]
     },
     {
@@ -356,7 +353,7 @@
         "{all}"
       ],
       "filter":[
-        {"action":"include","keywords":["🇺🇸|US|us|美国|美|United States"]},
+        {"action":"include","keywords":["🇺🇸|US|us|美国|美|United States"]}
       ]
     },
     {
