--- a/Toperlock/sing-box-subscribe/config_template/config_template_groups_rule_set_gtun.json
+++ b/Toperlock/sing-box-subscribe/config_template/config_template_groups_rule_set_gtun.json
@@ -218,7 +218,8 @@
         "Japan",
         "America",
         "Others"
-      ]
+      ],
+      "default": "Singapore"
     },
     {
       "tag":"Disney+",
@@ -281,6 +282,16 @@
         "Japan",
         "America",
         "Others"
+      ]
+    },
+    {
+      "tag":"Home broadband",
+      "type":"selector",
+      "outbounds":[
+        "{all}"
+      ],
+      "filter":[
+        {"action":"exclude","keywords":["网站|地址|剩余|到期|过期|时间|有效|Traffic|Expire"]}
       ]
     },
     {
