--- a/Toperlock/sing-box-subscribe/config_template/config_template_groups_rule_set_gtun.json
+++ b/Toperlock/sing-box-subscribe/config_template/config_template_groups_rule_set_gtun.json
@@ -291,7 +291,7 @@
         "{all}"
       ],
       "filter":[
-        {"action":"include","keywords":["Ho"]}
+        {"action":"include","keywords":["Home"]}
       ]
     },
     {
