--- a/Toperlock/sing-box-subscribe/config_template/config_template_groups_rule_set_gtun.json
+++ b/Toperlock/sing-box-subscribe/config_template/config_template_groups_rule_set_gtun.json
@@ -299,6 +299,7 @@
       "type":"selector",
       "outbounds":[
         "auto",
+        "Home broadband",
         "HongKong",
         "TaiWan",
         "Singapore",
